2014-06-30  Jason Merrill  <jason@redhat.com>

	PR c++/61539
	* pt.c (unify_one_argument): Type/expression mismatch just causes
	deduction failure.

	PR c++/61500
	* tree.c (lvalue_kind): Handle MEMBER_REF and DOTSTAR_EXPR.

2014-06-17  Jason Merrill  <jason@redhat.com>

	PR c++/60605
	* pt.c (check_default_tmpl_args): Check DECL_LOCAL_FUNCTION_P.

2014-06-02  Jason Merrill  <jason@redhat.com>

	PR c++/61134
	* pt.c (pack_deducible_p): Handle canonicalization.

2014-05-22  Release Manager

	* GCC 4.8.3 released.

2014-05-13  Jason Merrill  <jason@redhat.com>

	PR c++/60708
	* call.c (build_array_conv): Call complete_type.

	PR c++/60713
	* typeck2.c (PICFLAG_SIDE_EFFECTS): New.
	(picflag_from_initializer): Return it.
	(process_init_constructor): Handle it.

	PR c++/60628
	* decl.c (create_array_type_for_decl): Complain about array of auto.

	PR c++/60367
	* call.c (convert_default_arg): Remove special handling for
	CONSTRUCTOR.

2014-04-28  Daniel Gutson  <daniel.gutson@tallertechnologies.com>

	* typeck.c (build_reinterpret_cast_1): Pass proper argument to
	warn() in pedantic.

2014-02-28  Jason Merrill  <jason@redhat.com>

	PR c++/58845
	* typeck.c (cp_build_binary_op): Sorry on vector&&vector.

2014-02-26  Jason Merrill  <jason@redhat.com>

	PR c++/60182
	* pt.c (unify): Ignore alias templates when deducing a template
	template parameter.

2014-02-24  Jason Merrill  <jason@redhat.com>

	PR c++/60146
	* pt.c (tsubst_omp_for_iterator): Don't let substitution of the
	DECL_EXPR initialize a non-class iterator.

2014-02-24  Fabien Chêne  <fabien@gcc.gnu.org>
        PR c++/37140
        * parser.c (cp_parser_nonclass_name): Call strip_using_decl and
	move the code handling dependent USING_DECLs...
        * name-lookup.c (strip_using_decl): ...Here.

2014-02-21  Jason Merrill  <jason@redhat.com>

	PR c++/60108
	* semantics.c (expand_or_defer_fn_1): Check DECL_DEFAULTED_FN.

	PR c++/60187
	* parser.c (cp_parser_enum_specifier): Call
	check_for_bare_parameter_packs.
